[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/assets/finish_point/FinishPoint.gd" type="Script" id=1]
[ext_resource path="res://levels/assets/finish_point/FinishPoint.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="FinishPoint" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="OuterRing" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="InnerRing" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorTimer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="." to="." method="_on_FinishPoint_body_entered"]
[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]
